# openapi2jsonschemasingleschema

./: Dockerfile  README.md  pyproject.toml  pytest.ini
openapi2jsonschemasingleschema/: command.py  test_command.py  util.py
